still to do remaning part3

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -7,6 +7,16 @@
     <p class="lead">Just another to-do app.</p>
   </div>
 
+  <form action="/create-a-todo" method="post" class="form-example">
+    <div class="form-example">
+      <label for="name">Add new item: </label>
+      <input type="text" name="todo-name" id="todo-name" required>
+    </div>
+    <div class="form-example">
+      <input type="submit" value="Submit">
+    </div>
+  </form>
+
   <div class="row">
     <div class="col-md-12">
       <h2>Items</h2>
