--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -22,7 +22,7 @@
       <h2>Items</h2>
       <ul class="list-group mb-4">
         {% for item in items %}
-          <li>{{ item.title }} - {{item.status}}</li>
+          <li>{{ item.name }} - {{item.status}}</li>
         {% endfor %}
       </ul>
     </div>
