--- a/.env.j2
+++ b/.env.j2
@@ -1,4 +1,4 @@
 
-TRELLO_API_TOKEN={{ trello_token }}
-TRELLO_API_KEY={{ trello_key }}
-TRELLO_BOARD_ID={{ trello_board_id }}
+FLASK_APP=todo_app/app
+FLASK_ENV=development
+SECRET_KEY=secret-key
