Add Todo and Done item sections on homepage

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -19,15 +19,30 @@
   
   <div class="row">
     <div class="col-md-12">
-      <h2>Items</h2>
+      <h2>Todo Items</h2>
       <ul class="list-group mb-4">
-        {% for item in view_model.items %}
-              # {{item.name}}
-        <form action="/move-to-done/{{item.id}}" method="post" class="form-example">
-          <div class="form-example">
-            <input type="submit" value="Done">
-          </div>
-        </form>
+        {% for item in view_model.todo_items %}
+          <li>
+            {{item.name}}
+            <form action="/move-to-done/{{item.id}}" method="post" class="form-example">
+              <div class="form-example">
+                <input type="submit" value="Done">
+              </div>
+            </form>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Done Items</h2>
+      <ul class="list-group mb-4">
+        {% for item in view_model.done_items %}
+        <li>
+          {{item.name}}
+        </li>
         {% endfor %}
       </ul>
     </div>
